2009-04-11  Michael Banck  <mbanck@gmx.net>

	* src/formats/outformat.cpp (ReadMolecule): Added MOLPRO output
	file detection.

2009-04-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/rotamer.cpp, src/math/spacegroup.cpp, src/mol.cpp,
	src/formats/smilesformat.cpp, src/formats/pdbformat.cpp,
	src/formats/MCDLformat.cpp, src/formats/xml/cmlformat.cpp: 
	Compiler warnings and cppcheck complaint fixes.

2009-04-08  Michael Banck  <mbanck@gmx.net>

	* src/formats/gaussformat.cpp (ReadMolecule): Adjust normal modes
	parsing when Raman intensities are present.  Fixes PR#2728543.

2009-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Fix compile error. Make sure to
	cast NULL in a vector constructor.

	* src/formats/CMakeLists.txt: Add Michael's Molpro format.

	* src/forcefield/forcefieldmmff94.cpp: Fix errors in PR#2741658
	and PR#2741669, reported by  Tushar Jain.

2009-04-07  Michael Banck  <mbanck@gmx.net>

	* src/formats/molproformat.cpp (ReadMolecule): Added dipole 
	moments.

2009-04-07  Michael Banck  <mbanck@gmx.net>

	* src/formats/nwchemformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Fixes PR#2728437.

	* src/formats/moldenformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Closes PR#2737715.

	* src/formats/molproformat.cpp: New file.  Closes PR#2731625.
	* src/formats/Makefile.am: Updated.
	* src/formats/Makefile.in: Regenerated.

2009-04-06  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp,
	windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj
	windows-vc2005/OBUtilFormats/OBUtilFormats.vcproj:
	remove contamination from experimental version so that compiles again.

2009-06-27  Chris Morley <c.morley@gaseq.co.uk>

	Make parsing of SMILES files stricter, following discussion on
	mailing list.
	* src/formats/smilesformat.cpp(Read Molecule):
	lines starting with # are ignored; lines starting with whitespace